
3.32  2012-08-19
  - Added event sequentialization support to Mojo::IOLoop::Delay.
    (judofyr, marcus, sri)
  - Added tap method to Mojo::Base.
  - Added squish method to Mojo::ByteStream.
  - Added squish function to Mojo::Util.
  - Improved documentation.
  - Improved tests.
  - Fixed json_has method in Test::Mojo.

3.31  2012-08-15
  - Added accept_charset, accept_encoding, content_encoding, origin and
    sec_websocket_extensions methods to Mojo::Headers.
  - Improved documentation.
  - Improved tests.

3.30  2012-08-14
  - Added te method to Mojo::Headers.
  - Improved documentation.
  - Fixed small content encoding bug in Mojo::Message.

3.29  2012-08-13
  - Improved documentation.
  - Improved tests.
  - Fixed small timing bugs in WebSocket and TLS tests.

3.28  2012-08-10
  - Added skip_body attribute to Mojo::Content.
  - Added is_empty method to Mojo::Message::Response.
  - Updated jQuery to version 1.8.
  - Improved Mojo::Base to assign names to generated subroutines.
  - Improved message parser performance slightly.
  - Improved documentation.
  - Improved tests.
  - Fixed 1xx, 204 and 304 response support.

3.27  2012-08-09
  - Improved documentation.
  - Improved tests.

3.26  2012-08-09
  - Improved tests.

3.25  2012-08-08
  - Improved documentation.
  - Fixed cleanup bugs in Mojo::Server::Daemon and Mojo::UserAgent.

3.24  2012-08-08
  - Improved documentation.
  - Improved tests.

3.23  2012-08-07
  - Added appcache MIME type.
  - Improved documentation.

3.22  2012-08-06
  - Added mp4, ogg, ogv and webm MIME types.
  - Removed x- prefix from js and woff MIME types.
  - Improved documentation.
  - Fixed gz and xml MIME types.

3.21  2012-08-05
  - Improved documentation.
  - Improved tests.
  - Fixed Perl 5.17.3+ compatibility.
  - Fixed small AUTOLOAD bug in Mojolicious::Lite.

3.20  2012-08-04
  - Added extract_start_line method to Mojo::Message, Mojo::Message::Request
    and Mojo::Message::Response.